--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -31,7 +31,7 @@ stages:
     - task: Maven@4
       inputs:
         mavenPomFile: 'pom.xml'
-        goals: 'version'
+        goals: 'verify'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
         javaHomeOption: 'JDKVersion'
