--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -28,17 +28,14 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: JavaToolInstaller@0
-      inputs:
-        versionSpec: '17'
-        jdkArchitectureOption: 'x86'
-        jdkSourceOption: 'PreInstalled'
     - task: Maven@4
       inputs:
         mavenPomFile: 'pom.xml'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
         javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.17'
+        jdkArchitectureOption: 'x64'
         mavenVersionOption: 'Default'
         mavenAuthenticateFeed: false
         effectivePomSkip: false
